fix-memory-leaks (#70)
* fix memory leaka
* checkstyle
* tests